@@ -169,8 +169,7 @@ typing "kwsH" creates "ක්ෂ", while "kWsH" produces joint "ක්‍ෂ".<p
 <a name="install" />
 <h2>Installing</h2>
 
-<p>Latest version of SCIM module (0.3.0) for Sayura can be found <a
-href="http://sinhala.sourceforge.net/files/">here</a>.</p>
+<p>Latest version of SCIM module is 0.3.1.  Download it <a href="scim-sayura-0.3.1.tar.gz">here</a>.</p>
 
 <p>If you want to try out the present stable version of Sayura SCIM
 module (which is called scim-sinhala-trans), follow the instructions at
@@ -180,8 +179,8 @@ support and improvements to the scheme itself.</p>
 
 <p>On Debian based systems, you easily make a DEB package:</p>
 <pre class="term">
-% tar -xzvf scim-sayura-0.3.0.tar.gz
-% cd scim-sayura-0.3.0
+% tar -xzvf scim-sayura-0.3.1.tar.gz
+% cd scim-sayura-0.3.1
 % dpkg-buildpackage -b
 </pre>
 
