@@ -1,3 +1,8 @@
+Overview of Changes from scim-sinhala-0.3.0 to scim-sinhala-0.3.1
+=================================================================
+* Works on KDE.
+* Better usability.
+
 Overview of Changes from scim-sinhala-0.2.0 to scim-sinhala-0.3.0
 =================================================================
 * Better usability.
